force-app/main/default/objects/Contact_Announcement__c.object
<CustomObject>
    <fields>
        <fullName>Announcement__c</fullName>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Contact Announcements</relationshipLabel>
        <relationshipName>Contact_Announcements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Caretaker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Announcements</relationshipLabel>
        <relationshipName>Contact_Announcements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Off__c</fullName>
        <description>The date this announcement will be turned off for this contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Off</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_On__c</fullName>
        <description>The date this announcement will be turned on for this contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dismissed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dismissed</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dismissed__c</columns>
        <columns>Contact__c</columns>
        <columns>Announcement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Announcements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>